--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,9 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build-n-publish:
@@ -22,12 +25,5 @@ jobs:
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
-        user: __token__
+        user: gwf
         password: ${{ secrets.pypi_password }}
-- name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run tests
-      run: |
-        python -m unittest discover tests
