--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,12 +15,12 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - name: Install pep517
+    - name: Install build module
       run: |
-        python -m pip install pep517 --user
+        python -m pip install build
     - name: Build a binary wheel and a source tarball
       run: |
-        python -m pep517.build --source --binary --out-dir dist/ .
+        python -m build
     - name: Publish distribution to PyPI
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
