--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,11 @@
 name: publish
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   build-n-publish:
     name: Build and publish Python dist to PyPI
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -22,7 +20,6 @@ jobs:
       run: |
         python -m build
     - name: Publish distribution to PyPI
-      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: gwf
