--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,21 +10,10 @@ jobs:
     name: Build and publish Python dist to PyPI
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Build and publish to pypi
+        uses: JRubics/poetry-publish@v1.17
         with:
-          python-version: '3.x'
-      - name: Install build module
-        run: |
-          python -m pip install build
-      - name: Build a binary wheel and a source tarball
-        run: |
-          python -m build
-      - name: Publish distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
