--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,16 +4,28 @@ on:
   push:
     tags:
       - '*'
-
 jobs:
   build-n-publish:
-    name: Build and publish Python dist to PyPI
+    name: Build and publish Python distributions to PyPi
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          ref: ${{ github.ref }}
-      - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.17
+          python-version: 3.8
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+
+      - name: Build package
+        run: python -m build
+
+      - name: Publish distribution 📦 to PyPi
+        uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
