--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,13 +3,15 @@ name: publish
 on:
   push:
     tags:
-      - '*'
+      - v*
 jobs:
   build-n-publish:
     name: Build and publish Python distributions to PyPi
-    runs-on: ubuntu-latest
+runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -22,9 +24,9 @@ jobs:
           pip install build
 
       - name: Build package
-        run: python -m build
+        run: python -m build --sdist --wheel
 
-      - name: Publish distribution 📦 to PyPi
+      - name: Publish distribution to PyPi
         uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           user: __token__
